# cryptocrush

./: .gitignore  README.md  pyproject.toml
src/: db.sqlite3  manage.py
src/cryptocrush/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/posts/: models.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py  0002_alter_post_slug_alter_post_title.py
src/posts/templates/posts/: posts_index.html
src/static/css/: posts.css
src/static/js/: posts.js
src/templates/: index.html
