[project]
name = "cryptocrush"
version = "0.1.0"
description = "A Website-like repository of the different encodings and ciphers I use and learn powered by Django"
authors = [
    {name = "cryoxero",email = "cryoxero@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "markdown (>=3.8,<4.0)",
]

[tool.poetry]
packages = [{include = "cryptocrush", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
